force-app/main/default/objects/IOM__c/IOM__c.object-meta.xml
<CustomObject>
    <label>IOM</label>
    <nameField>
        <label>IOM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IOM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>