force-app/main/default/objects/IOM__c/fields/AGM_Verifier__c.field-meta.xml
<CustomField>
    <fullName>AGM_Verifier__c</fullName>
    <label>AGM - Verifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>