force-app/main/default/objects/IOM__c/fields/Assistant_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Manager__c</fullName>
    <label>Assistant Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>