force-app/main/default/objects/IOM__c/fields/AVP_Sales__c.field-meta.xml
<CustomField>
    <fullName>AVP_Sales__c</fullName>
    <label>AVP  Sales</label>
    <length>100</length>
    <type>Text</type>
</CustomField>