force-app/main/default/objects/IOM__c/fields/C_O_O__c.field-meta.xml
<CustomField>
    <fullName>C_O_O__c</fullName>
    <label>C.O.O</label>
    <length>100</length>
    <type>Text</type>
</CustomField>