force-app/main/default/objects/IOM__c/fields/Comments_2__c.field-meta.xml
<CustomField>
    <fullName>Comments_2__c</fullName>
    <label>Comments 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>