force-app/main/default/objects/IOM__c/fields/MD__c.field-meta.xml
<CustomField>
    <fullName>MD__c</fullName>
    <label>MD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>