force-app/main/default/objects/IOM__c/fields/Nature_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Request__c</fullName>
    <label>Nature of Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>